Fixed issue #10817: Testing 2.50 default template on mobile devices
Align array-by-column question header with radio buttons on small
screens.

--- a/templates/default/css/template.css
+++ b/templates/default/css/template.css
@@ -840,6 +840,7 @@ table {
 
     .array-by-columns-div .answertext {
         padding: 8px;
+        padding-left: 0;
         text-align: left;
         font-weight: bold;
     }
